2010-05-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-progress-reporter): Create reporter object only
	when the message would be displayed.  Handled nested calls.
	(tramp-handle-load, tramp-handle-file-local-copy)
	(tramp-handle-insert-file-contents, tramp-handle-write-region)
	(tramp-maybe-send-script, tramp-find-shell): Use
	`with-progress-reporter'.
	(tramp-handle-dired-compress-file, tramp-maybe-open-connection):
	Fix message text.

	* tramp-smb.el (tramp-smb-handle-copy-file)
	(tramp-smb-handle-file-local-copy, tramp-smb-handle-rename-file)
	(tramp-smb-handle-write-region, tramp-smb-maybe-open-connection):
	Use `with-progress-reporter'.

2010-05-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-file-attributes-with-stat): Add space in
	format string, in order to work around a bug in pdksh.  Reported
	by Gilles Pion <gpion@lfdj.com>.
	(tramp-handle-verify-visited-file-modtime): Do not send a command
	when the connection is not established.
	(tramp-handle-set-file-times): Simplify the check for utc.

2010-05-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (byte-compile-not-obsolete-vars): Define if not
	bound.
	(tramp-compat-copy-file): Add PRESERVE-SELINUX-CONTEXT.
	(tramp-compat-funcall): New defmacro.
	(tramp-compat-line-beginning-position)
	(tramp-compat-line-end-position)
	(tramp-compat-temporary-file-directory)
	(tramp-compat-make-temp-file, tramp-compat-file-attributes)
	(tramp-compat-copy-file, tramp-compat-copy-directory)
	(tramp-compat-delete-file, tramp-compat-delete-directory)
	(tramp-compat-number-sequence, tramp-compat-process-running-p)
	* tramp.el (top, with-progress-reporter)
	(tramp-rfn-eshadow-setup-minibuffer)
	(tramp-rfn-eshadow-update-overlay, tramp-handle-set-file-times)
	(tramp-handle-dired-compress-file, tramp-handle-shell-command)
	(tramp-completion-mode-p, tramp-check-for-regexp)
	(tramp-open-connection-setup-interactive-shell)