@@ -1,7 +1,13 @@
+2010-05-19  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-methods): Add `tramp-async-args' attribute where
+	appropriate.
+	(tramp-maybe-open-connection): Use it.
+
 2010-05-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (with-progress-reporter): Create reporter object only
-	when the message would be displayed.  Handled nested calls.
+	when the message would be displayed.  Handle nested calls.
 	(tramp-handle-load, tramp-handle-file-local-copy)
 	(tramp-handle-insert-file-contents, tramp-handle-write-region)
 	(tramp-maybe-send-script, tramp-find-shell): Use
